--- a/static/TODO.txt
+++ b/static/TODO.txt
@@ -1,5 +1,4 @@
  - Warn if browser outdated: modernizr browsehappy.com & test page
- - Typography
  - Nav
  - Footer
  - Register
@@ -8,3 +7,21 @@
  - Settings
  - Gallery
  - Useability social site: why follow, what to share, comments - source from FB, twitter, G+, etc, ratings
+
+Navigation:
+1. Sort items according to relevance
+2. Items: Gallery, How to, Stitch room(if logged), [User options->Settings,Logout|Login|Signup]
+
+Language selection(is not navigarion - so seperate it):
+http://laak.fi/category/usability/
+1. Use alphabetical order for latin name: a,b,c,d
+2. Use local language name near - русский
+3. Place where it easy to find - header
+4. If only few languages - do not hide them in the drop down menu - just print them on the page
+5. Incorporate language to url
+
+Postulates:
+Navigation is not a ui-router state - navigation depends on page we are observing, it can be absolutelly different
+Login/Logout is not a ui-router state too - navigation as well as other elements on page can depend on login/logout status - i.e. it's service
+Login/Signup is a ui-router state, it's not a popup - expirience can be quite complex
+Language selection dialog is no a ui-router state, it's close to popup... Just a way to show ui - so user can select language
